# arbitrage-scanner

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: .env.example  app.py  pyproject.toml  requirements.txt
backend/src/arbitrage_scanner/: __init__.py  app.py  constants.py  domain.py  settings.py  store.py
backend/src/arbitrage_scanner/connectors/: base.py  bigx.py  bigx_perp.py  binance.py  binance_futures.py  binance_rest.py  bingx.py  bingx_perp.py  bingx_rest.py  bingx_utils.py  bybit.py  bybit_perp.py  bybit_rest.py  discovery.py  gate.py  gate_perp.py  gate_rest.py  loader.py  mexc.py  mexc_perp.py  mexc_perp_class.py  mexc_perp_modified.py  mexc_perp_old.py  mexc_perp_runner.py  mexc_rest.py  utils.py
backend/src/arbitrage_scanner/db/: __init__.py  models.py  repositories.py  sync.py
backend/src/arbitrage_scanner/engine/: spread_calc.py  spread_history.py
backend/src/arbitrage_scanner/exchanges/: base.py  fees.py  (+2 more)
backend/src/fastapi/: __init__.py  responses.py  testclient.py
backend/src/httpx/: __init__.py
backend/src/pydantic/: __init__.py
backend/src/starlette/: websockets.py
backend/tests/: conftest.py  test_bingx_perp_ws.py  test_database.py  test_discovery_bingx.py  test_gate_perp_ws.py  test_mexc_perp_ws.py  test_settings.py  test_spread_calc_pairs.py
docs/: 02-setup.md  03-backend-dev.md  requirements-gap-analysis.md
frontend/: package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: dashboard.tsx  pair-view.tsx  spreads-table.tsx
frontend/lib/: api.ts  types.ts
(+10 files in other folders)
