[project]
name = "arbitrage-scanner"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.112.0)",
    "pydantic (>=2.7.4)",
    "websockets (>=12.0)",
    "uvicorn (>=0.30.0)",
    "httpx (>=0.27.0)",
    "sqlalchemy[asyncio] (>=2.0.32)",
    "asyncpg (>=0.29.0)",
    "alembic (>=1.13.2)"
]

[dependency-groups]
dev = [
    "pytest (==8.3.3)",
    "pytest-asyncio (==0.24.0)",
    "mypy (==1.11.2)",
    "black (==24.8.0)",
    "isort (==5.13.2)",
    "flake8 (==7.1.1)",
    "pre-commit (==3.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
